--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div id="contenedor-iconos">
         <div class="icono2" id="icono-1">
           <img class="img-iconos-derechaDelCelu" src="img/about-icon-01.png" alt="lupa">
-          <div>
+          <div class="textos-de-iconos1">
             <h4>Crea</h4>
             <p id="texto-iconos2">Con una interfaz fácil de usar, crea todo tipo de eventos en un instante.</p>
           </div>
@@ -67,7 +67,7 @@
     
         <div class="icono2">
           <img class="img-iconos-derechaDelCelu" src="img/about-icon-02.png" alt="">
-          <div>
+          <div class="textos-de-iconos1">
             <h4>Comparte</h4>
             <p id="texto-iconos2">Envía la invitación del evento a todos tus amigos.</p>
           </div>
@@ -75,7 +75,7 @@
     
         <div class="icono2">
           <img class="img-iconos-derechaDelCelu" src="img/about-icon-03.png" alt="">
-          <div>
+          <div class="textos-de-iconos1">
             <h4>Disfruta</h4>
             <p id="texto-iconos2">Aprovecha tu tiempo pasándola bien. Nosotros te ayudamos.</p>
           </div>
