add team data and change text size

--- a/index.html
+++ b/index.html
@@ -84,6 +84,46 @@
     </section>
 
 
+    <!--Equipo-->
+
+    <div class="nuestro-equipo">
+      <h2 class="txt-nuestro-equipo" style="font-size: 2em;">El equipo detrás de <span style="color: #155da1;"> Ranchapp ™ </span></h2>
+      <p class="txt-nuestro-equipo">
+        Detrás de RanchApp se encuentra un equipo apasionado de desarrolladores y diseñadores dedicados a revolucionar la forma en que las personas organizan sus eventos sociales. Con un enfoque en la simplicidad y la eficiencia, les presentamos una aplicación intuitiva y potente que permita a los usuarios gestionar cada aspecto de sus eventos, desde la planificación hasta la ejecución.
+      </p>
+    </div>
+    
+    <section class="cuadradosEquipo">
+
+      <div class="cuadroEquipo">
+        <img class="iconoEquipo" src="img/santino.png" alt="santino fazio participe del proyecto realizado">
+        <h2 class="h2-cuadro-equipo" >Santino Fazio</h2>
+        <p class="p-cuadro-equipo" >“El diseño de RanchApp está pensado para brindar la mejor experiencia visual y de usuario, haciendo que la planificación y participación en eventos sea tan sencilla como emocionante.”</p>
+      </div>
+
+      <div class="cuadroEquipo">
+        <img class="iconoEquipo" src="img/cesar.png" alt="icesar rivero participe del proyecto realizado">
+        <h2 class="h2-cuadro-equipo" >Cesar Rivero</h2>
+        <p class="p-cuadro-equipo">“En RanchApp, gestionamos cada detalle con precisión para que tus eventos sean más que una simple reunión, sean experiencias inolvidables. ”</p>
+      </div>
+
+      <div class="cuadroEquipo">
+        <img class="iconoEquipo" src="img/victoria.png" alt="victoria ripa participe del proyecto realizado">
+        <h2 class="h2-cuadro-equipo">Victoria ripa</h2>
+        <p class="p-cuadro-equipo">“RanchApp ofrece una plataforma intuitiva y poderosa que conecta a las personas de manera fluida, permitiendo que cada evento sea más accesible y memorable. ”</p>
+      </div>
+
+      <div class="cuadroEquipo">
+        <img class="iconoEquipo" src="img/ignacio.png" alt="ignacio armendariz participe del proyecto realizado">
+        <h2 class="h2-cuadro-equipo" >Ignacio Armendariz</h2>
+        <p class="p-cuadro-equipo">"Con RanchApp, hemos construido una base tecnológica sólida que soporta una interacción rápida y confiable, garantizando que cada evento se desarrolle sin contratiempos."</p>
+      </div>
+  </section>  
+
+
+    
+
+
 
     <script src="js/script.js"></script>
 </body>
