add option send email with the consult  and change responsive form

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
     <div class="contact-container">
         <div class="contact-form">
             <form id="contactForm" onsubmit="sendEmail(event)">
-                <input type="text" id="name" name="name" placeholder="Nombre" required>
-                <input type="email" id="email" name="email" placeholder="Email" required>
-                <input type="tel" id="phone" name="phone" placeholder="Teléfono" required>
-                <textarea id="message" name="message" rows="4" placeholder="Mensaje" required></textarea>
+                <input type="text" id="name" name="name" placeholder=" Nombre" required>
+                <input type="email" id="email" name="email" placeholder=" Email" required>
+                <input type="tel" id="phone" name="phone" placeholder=" Teléfono" required>
+                <textarea id="message" name="message" rows="4" placeholder=" Mensaje" required></textarea>
                 <input type="text" id="honeypot" name="honeypot" style="display:none;">
-                <button type="submit">ENVIAR POR WHATSAPP</button>
+                <button type="submit">ENVIAR</button>
             </form>
         </div>
     </div>
