change text the page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="cuadro">
           <img class="icono" src="img/features-icon-2.png" alt="Icono 2">
-          <h2 style="color: black;">Comparti</h2>
+          <h2 style="color: black;">Compartí</h2>
           <p>Envía la invitación del evento a todos tus amigos.</p>
         </div>
         <div class="cuadro">
@@ -63,18 +63,18 @@
         <div class="icono2" id="icono-1">
           <img class="img-iconos-derechaDelCelu" src="img/about-icon-01.png" alt="lupa">
           <div class="textos-de-iconos1">
-            <h4>Encontra Llega a tiempo y sin complicaciones.</h4>
+            <h4>Encontra</h4>
             <p id="texto-iconos2">
-              Nuestra app te guía directamente al evento, asegurando que no te pierdas en el camino.</p>
+              Llega a tiempo y sin complicaciones. Nuestra app te guía directamente al evento, asegurando que no te pierdas en el camino.</p>
           </div>
         </div>
         
         <div class="icono2">
           <img class="img-iconos-derechaDelCelu" src="img/about-icon-01.png" alt="">
           <div class="textos-de-iconos1">
-            <h4>Dividí Organiza los gastos fácilmente.</h4>
+            <h4>Dividí</h4>
             <p id="texto-iconos2">
-              Dividí los costos del evento entre todos los participantes de manera rápida y transparente.              
+              Organiza los gastos fácilmente dividiendo los costos del evento entre todos los participantes de manera rápida y transparente.              
               </p>
           </div>
         </div>
@@ -118,7 +118,7 @@
 
       <div class="cuadroEquipo">
         <img class="iconoEquipo" src="img/victoria.png" alt="victoria ripa participe del proyecto realizado">
-        <h2 class="h2-cuadro-equipo">Victoria ripa</h2>
+        <h2 class="h2-cuadro-equipo">Victoria Ripa</h2>
         <p class="p-cuadro-equipo">"RanchApp conecta a las personas de manera fluida, haciendo que cada evento sea fácil de planificar y memorable de vivir."</p>
       </div>
 
