change color and size the text
change color the  text and size the this.
change size the shadows in the titles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <section>
+    <section id="INICIO">
         <header>
             <div class="navbar">
                 <h1 id="ranchaapH1">RANCHAPP</h1>
