--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="INICIO">
         <header>
             <div class="navbar">
-                <h1 id="ranchaapH1">RANCHAPP</h1>
+               <!-- <h1 id="ranchaapH1">RANCHAPP</h1> -->
                 <ul class="nav-list">
                     <li><button onclick="window.location.href='#INICIO'">INICIO</button></li>
                     <li><button onclick="window.location.href='#EVENTOS'">EVENTOS</button></li>
@@ -71,6 +71,8 @@
             </div>
             <img id="img-banner" src="img/banner-bg.png" alt="">
             <div>
+              <!--
+                -->
                 <img class="img-logo" src="img/logo.png" alt="">
                 <p class="p-img-logo"><span id="pie-img">Ya son más de 10,000 usuarios que usan la mejor herramienta <br> para organizar eventos. ¡Súmate y empeza a disfrutar de todo <br> lo que te ofrece nuestra app! Hacelo fácil... usa RanchApp.</span> <span id="p-span">Ya somos más de 10,000 usuarios <br> ¿Qué esperas para sumarte?</span></p>
                 
