change background-color and text and size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Para utilizar RanchApp, los usuarios deben iniciar sesión a través de Google OAuth, lo que permite un acceso seguro mediante la cuenta de Google del usuario. RanchApp no almacena directamente los datos personales del usuario; la autenticación y gestión de datos están a cargo de Google. Es responsabilidad del usuario proteger la seguridad de su cuenta de Google y notificar a Google en caso de actividad no autorizada.</p>
           
           <p><strong>4. Privacidad y Protección de Datos</strong><br>
-          RanchApp respeta la privacidad de sus usuarios y utiliza Google OAuth para la autenticación, por lo que la información de inicio de sesión y los datos personales del usuario son gestionados por Google, no por RanchApp. Asimismo, RanchApp utiliza el Google Calendar API y Google Maps API para funcionalidades específicas de la aplicación. La información recopilada mediante estas APIs se usa exclusivamente para el funcionamiento de RanchApp y no se comparte con terceros sin el consentimiento del usuario. Para más detalles sobre el manejo de datos personales, consulta la <a href="#">Política de Privacidad de Google</a>.</p>
+          RanchApp respeta la privacidad de sus usuarios y utiliza Google OAuth para la autenticación, por lo que la información de inicio de sesión y los datos personales del usuario son gestionados por Google, no por RanchApp. Asimismo, RanchApp utiliza el Google Calendar API y Google Maps API para funcionalidades específicas de la aplicación. La información recopilada mediante estas APIs se usa exclusivamente para el funcionamiento de RanchApp y no se comparte con terceros sin el consentimiento del usuario. Para más detalles sobre el manejo de datos personales, consulta la <a href="https://policies.google.com/privacy?hl=es" target="_blank">Política de Privacidad de Google</a>.</p>
 
           <p><strong>5. Pagos y Transacciones</strong><br>
           RanchApp permite la división de gastos entre los participantes de eventos mediante la integración con el sistema de pagos de Mercado Pago. El usuario comprende que RanchApp actúa como intermediario en la organización y cálculo de los gastos, pero no es responsable de problemas derivados de los sistemas de pago externos. Cualquier problema o disputa relacionada con los pagos deberá ser gestionada directamente con Mercado Pago u otros proveedores de pagos utilizados por el usuario.</p>
@@ -87,18 +87,18 @@
     <section id="INICIO" class="cuadrados">
         <div class="cuadro">
           <img class="icono" src="img/features-icon-1.png" alt="Icono 1">
-          <h2 style="color: black;">Crea</h2>
-          <p>Con una interfaz simple y fácil de usar, crea cualquier tipo de evento en un instante.</p>
+          <h2 style="color: white;">Crea</h2>
+          <p style="align-items: center;">Con una interfaz simple y fácil de usar, crea cualquier tipo de evento en un instante.</p>
         </div>
         <div class="cuadro">
           <img class="icono" src="img/features-icon-2.png" alt="Icono 2">
-          <h2 style="color: black;">Compartí</h2>
-          <p>Envía la invitación del evento a todos tus amigos.</p>
+          <h2 style="color: white;">Compartí</h2>
+          <p style="align-items: center;">Envía la invitación del evento a todos tus amigos.</p>
         </div>
         <div class="cuadro">
           <img class="icono" src="img/features-icon-3.png" alt="Icono 3">
-          <h2 style="color: black;">Disfruta</h2>
-          <p>Relájate y disfruta del momento, nosotros nos encargamos del resto.</p>
+          <h2 style="color: white;">Disfruta</h2>
+          <p style="align-items: center; justify-content: center;">Relájate y disfruta del momento, nosotros nos encargamos del resto.</p>
         </div>
     </section>
 
