change the text and pop up and add the copyrigth

--- a/index.html
+++ b/index.html
@@ -193,9 +193,10 @@
                 <textarea id="message" name="message" rows="4" placeholder=" Mensaje" required></textarea>
                 <input type="text" id="honeypot" name="honeypot" style="display:none;">
                 <button type="submit">ENVIAR</button>
-            </form>
-        </div>
-    </div>
+              </form>
+            </div>
+          </div>
+          <p id="politicas-copyrigth">© 2024 RANCHAPP. Todos los derechos reservados.</p>
     <img src="img/footer-bg.png" alt="Fondo" id="bg-image">
 </section>
 
